# Algolabra

./: .gitignore  README.md  example.cnf  main.py  pyproject.toml  satsolver.py
docs/: Toteutusdokumentti.docx
test/: README..md  README.txt  generate_unsat_3sat.py  perf_100_420_test.py  perf_100_428_test.py  perf_100_429_test.py  perf_100_450_test.py  perf_100_480_test.py  perf_test.py  sat_unit_test.py  test_util.py  unit_test.py  unsat_unit_test.py
test/perf-tests/random-3-cnf-100-420/: 10_100_420.cnf  1_100_420.cnf  2_100_420.cnf  3_100_420.cnf  4_100_420.cnf  5_100_420.cnf  6_100_420.cnf  7_100_420.cnf  8_100_420.cnf  9_100_420.cnf
test/perf-tests/random-3-cnf-100-428/: 10_100_428.cnf  1_100_428.cnf  2_100_428.cnf  3_100_428.cnf  4_100_428.cnf  5_100_428.cnf  6_100_428.cnf  7_100_428.cnf  8_100_428.cnf  9_100_428.cnf
test/perf-tests/random-3-cnf-100-429/: 10_100_429.cnf  1_100_429.cnf  2_100_429.cnf  3_100_429.cnf  4_100_429.cnf  5_100_429.cnf  6_100_429.cnf  7_100_429.cnf  8_100_429.cnf  9_100_429.cnf
test/perf-tests/random-3-cnf-100-450/: 10_100_450.cnf  1_3_100_450.cnf  2_3_100_450.cnf  3_100_450.cnf  4_100_450.cnf  5_100_450.cnf  6_100_450.cnf  7_100_450.cnf  8_100_450.cnf  9_100_450.cnf
test/perf-tests/random-3-cnf-100-480/: 10_100_480.cnf  1_100_480.cnf  2_100_480.cnf  3_100_480.cnf  4_100_480.cnf  5_100_480.cnf  6_100_480.cnf  7_100_480.cnf  8_100_480.cnf  9_100_480.cnf
test/perf-tests/random-3-cnf-200-856/: 1_200_856.cnf  2_200_856.cnf  3_200_856.cnf  4_200_856.cnf  5_200_856.cnf
test/unit-tests/unsat/: unsat3.cnf  unsat4.cnf  unsat_1.cnf  (+24 more)
