[project]
name = "algolabra"
version = "0.1.0"
description = "Tietorakenteet ja algoritmit -kurssin harjoitustyö"
authors = [
    {name = "Pekka Linna",email = "pekka.j.linna@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
cnfgen = "^0.9.3.post1"

