[tool.poetry]
name = "algolabra"
version = "0.9.9"
description = "Tietorakenteet ja algoritmit -kurssin harjoitustyö"
authors = ["Pekka Linna <pekka.j.linna@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
cnfgen = "^0.9.3.post1"
